# text-file-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: BACKEND_API.md
frontends/: __init__.py
frontends/restapi/: __init__.py  __main__.py  app.py  models.py
frontends/textui/: __init__.py  __main__.py  app.py
src/: __init__.py  client.py  credentials.py  exceptions.py  passwords.py  shard_manager.py
src/backends/: __init__.py  base.py  local.py  s3.py
tests/: __init__.py  conftest.py
tests/backend/: __init__.py  test_client.py  test_credentials.py  test_local_backend.py  test_passwords.py
tests/frontends/: __init__.py  test_restapi.py  test_textui.py
