[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-file-manager"
version = "0.2.0"
description = "Secure text file management with encrypted sharding using Shamir's Secret Sharing across local and cloud storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Text File Manager Contributors" }
]
keywords = [
    "encryption",
    "sharding",
    "secret-sharing",
    "security",
    "file-management",
    "chacha20",
    "shamir",
    "aws",
    "s3",
    "cloud-storage",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=42.0.0",
    "sslib>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.34.0",
    "boto3-stubs[s3,sts]>=1.34.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "moto[s3]>=5.0.0",
]
all = [
    "text-file-manager[aws,dev]",
]

[project.urls]
Homepage = "https://github.com/example/text-file-manager"
Documentation = "https://github.com/example/text-file-manager#readme"
Repository = "https://github.com/example/text-file-manager"
Issues = "https://github.com/example/text-file-manager/issues"

[project.scripts]
text-file-manager = "src.shard_manager:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
]
ignore = [
    "S101",   # assert usage is fine in tests
    "S311",   # we use secrets module, not random
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = "sslib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
